k8s/frontend/000-frontend-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    istio-injection: enabled

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: juidas/frontend:v1.0.13
        resources:
          requests:
            cpu: "400m"
        ports:
        - containerPort: 80
          name: http
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
