k8s/frontend/001-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myshop-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /products/
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
          - path: /cart/
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 80
          - path: /orders/
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
